[tool.poetry]
name = "api_python_crypto-wallet"
version = "0.1.0"
description = ""
authors = ["Juan <juan.gasparino@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.103.2"
debugpy = "^1.8.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
tqdm = "^4.64.1"
rfc3986 = "^2.0.0"
requests = "^2.28.1"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
numpy = "^1.23.5"
SQLAlchemy = { extras = ["asyncio"], version = "^2.0.15" }
psycopg = { extras = ["binary"], version = "^3.1.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
